[gd_scene load_steps=113 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Other/GRAB.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Other/Progress/ProgressBG1.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Other/Progress/ProgressBG2.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Other/Progress/ProgressBG3.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Other/Progress/ProgressBG4.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Other/Progress/ProgressBG5.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Other/Progress/ProgressBG6.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Other/Progress/ProgressBG7.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Other/PICK.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Other/CRACK.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Other/ENTER.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Player/T_Shadow/PlayerShadow1.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Player/T_Shadow/PlayerShadow2.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Player/T_Shadow/PlayerShadow3.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Player/T_Shadow/PlayerShadow4.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Player/T_Shadow/PlayerShadow5.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Player/T_Shadow/PlayerShadow6.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Player/T_Shadow/PlayerShadow7.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Player/T_Shadow/PlayerShadow8.png" type="Texture" id=20]
[ext_resource path="res://Sprites/Player/T_MoveUp/TDPlayerMoveUp1.png" type="Texture" id=21]
[ext_resource path="res://Sprites/Player/T_MoveDown/TDPlayerMoveDown1.png" type="Texture" id=22]
[ext_resource path="res://Sprites/Player/T_MoveDown/TDPlayerMoveDown2.png" type="Texture" id=23]
[ext_resource path="res://Sprites/Player/T_MoveDown/TDPlayerMoveDown3.png" type="Texture" id=24]
[ext_resource path="res://Sprites/Player/T_MoveDown/TDPlayerMoveDown4.png" type="Texture" id=25]
[ext_resource path="res://Sprites/Player/T_MoveDown/TDPlayerMoveDown5.png" type="Texture" id=26]
[ext_resource path="res://Sprites/Player/T_MoveDown/TDPlayerMoveDown6.png" type="Texture" id=27]
[ext_resource path="res://Sprites/Player/T_MoveDown/TDPlayerMoveDown7.png" type="Texture" id=28]
[ext_resource path="res://Sprites/Player/T_MoveDown/TDPlayerMoveDown8.png" type="Texture" id=29]
[ext_resource path="res://Sprites/Player/P_FallRight/PlayerFallRight.png" type="Texture" id=30]
[ext_resource path="res://Sprites/Player/T_GrabRight/TDPlayerGrabRight1.png" type="Texture" id=31]
[ext_resource path="res://Sprites/Player/T_GrabRight/TDPlayerGrabRight2.png" type="Texture" id=32]
[ext_resource path="res://Sprites/Player/T_GrabRight/TDPlayerGrabRight3.png" type="Texture" id=33]
[ext_resource path="res://Sprites/Player/T_GrabRight/TDPlayerGrabRight4.png" type="Texture" id=34]
[ext_resource path="res://Sprites/Player/T_MoveLeft/TDPlayerMoveLeft1.png" type="Texture" id=35]
[ext_resource path="res://Sprites/Player/P_MoveLeft/PlayerMoveLeft1.png" type="Texture" id=36]
[ext_resource path="res://Sprites/Player/P_MoveRight/PlayerMoveRight1.png" type="Texture" id=37]
[ext_resource path="res://Sprites/Player/P_MoveRight/PlayerMoveRight2.png" type="Texture" id=38]
[ext_resource path="res://Sprites/Player/P_MoveRight/PlayerMoveRight3.png" type="Texture" id=39]
[ext_resource path="res://Sprites/Player/P_MoveRight/PlayerMoveRight4.png" type="Texture" id=40]
[ext_resource path="res://Sprites/Player/P_MoveRight/PlayerMoveRight5.png" type="Texture" id=41]
[ext_resource path="res://Sprites/Player/P_MoveRight/PlayerMoveRight6.png" type="Texture" id=42]
[ext_resource path="res://Sprites/Player/P_MoveRight/PlayerMoveRight7.png" type="Texture" id=43]
[ext_resource path="res://Sprites/Player/P_MoveRight/PlayerMoveRight8.png" type="Texture" id=44]
[ext_resource path="res://Sprites/Player/T_MoveRight/TDPlayerMoveRight1.png" type="Texture" id=45]
[ext_resource path="res://Sprites/Player/P_MoveLeft/PlayerMoveLeft2.png" type="Texture" id=46]
[ext_resource path="res://Sprites/Player/P_MoveLeft/PlayerMoveLeft3.png" type="Texture" id=47]
[ext_resource path="res://Sprites/Player/P_MoveLeft/PlayerMoveLeft4.png" type="Texture" id=48]
[ext_resource path="res://Sprites/Player/P_MoveLeft/PlayerMoveLeft5.png" type="Texture" id=49]
[ext_resource path="res://Sprites/Player/P_MoveLeft/PlayerMoveLeft6.png" type="Texture" id=50]
[ext_resource path="res://Sprites/Player/P_MoveLeft/PlayerMoveLeft7.png" type="Texture" id=51]
[ext_resource path="res://Sprites/Player/P_MoveLeft/PlayerMoveLeft8.png" type="Texture" id=52]
[ext_resource path="res://Sprites/Player/P_FallLeft/PlayerFallLeft.png" type="Texture" id=53]
[ext_resource path="res://Sprites/Player/T_GrabDown/TDPlayerGrabDown1.png" type="Texture" id=54]
[ext_resource path="res://Sprites/Player/T_GrabDown/TDPlayerGrabDown2.png" type="Texture" id=55]
[ext_resource path="res://Sprites/Player/T_GrabDown/TDPlayerGrabDown3.png" type="Texture" id=56]
[ext_resource path="res://Sprites/Player/T_GrabDown/TDPlayerGrabDown4.png" type="Texture" id=57]
[ext_resource path="res://Sprites/Player/P_JumpLeft/PlayerJumpLeft.png" type="Texture" id=58]
[ext_resource path="res://Sprites/Player/T_GrabUp/TDPlayerGrabUp1.png" type="Texture" id=59]
[ext_resource path="res://Sprites/Player/T_GrabUp/TDPlayerGrabUp2.png" type="Texture" id=60]
[ext_resource path="res://Sprites/Player/T_GrabUp/TDPlayerGrabUp3.png" type="Texture" id=61]
[ext_resource path="res://Sprites/Player/T_GrabUp/TDPlayerGrabUp4.png" type="Texture" id=62]
[ext_resource path="res://Sprites/Player/P_JumpRight/PlayerJumpRight.png" type="Texture" id=63]
[ext_resource path="res://Sprites/Player/T_GrabLeft/TDPlayerGrabLeft1.png" type="Texture" id=64]
[ext_resource path="res://Sprites/Player/T_GrabLeft/TDPlayerGrabLeft2.png" type="Texture" id=65]
[ext_resource path="res://Sprites/Player/T_GrabLeft/TDPlayerGrabLeft3.png" type="Texture" id=66]
[ext_resource path="res://Sprites/Player/T_GrabLeft/TDPlayerGrabLeft4.png" type="Texture" id=67]
[ext_resource path="res://Sprites/Player/T_MoveLeft/TDPlayerMoveLeft2.png" type="Texture" id=68]
[ext_resource path="res://Sprites/Player/T_MoveLeft/TDPlayerMoveLeft3.png" type="Texture" id=69]
[ext_resource path="res://Sprites/Player/T_MoveLeft/TDPlayerMoveLeft4.png" type="Texture" id=70]
[ext_resource path="res://Sprites/Player/T_MoveLeft/TDPlayerMoveLeft5.png" type="Texture" id=71]
[ext_resource path="res://Sprites/Player/T_MoveLeft/TDPlayerMoveLeft6.png" type="Texture" id=72]
[ext_resource path="res://Sprites/Player/T_MoveLeft/TDPlayerMoveLeft7.png" type="Texture" id=73]
[ext_resource path="res://Sprites/Player/T_MoveLeft/TDPlayerMoveLeft8.png" type="Texture" id=74]
[ext_resource path="res://Sprites/Player/T_MoveRight/TDPlayerMoveRight2.png" type="Texture" id=75]
[ext_resource path="res://Sprites/Player/T_MoveRight/TDPlayerMoveRight3.png" type="Texture" id=76]
[ext_resource path="res://Sprites/Player/T_MoveRight/TDPlayerMoveRight4.png" type="Texture" id=77]
[ext_resource path="res://Sprites/Player/T_MoveRight/TDPlayerMoveRight5.png" type="Texture" id=78]
[ext_resource path="res://Sprites/Player/T_MoveRight/TDPlayerMoveRight6.png" type="Texture" id=79]
[ext_resource path="res://Sprites/Player/T_MoveRight/TDPlayerMoveRight7.png" type="Texture" id=80]
[ext_resource path="res://Sprites/Player/T_MoveRight/TDPlayerMoveRight8.png" type="Texture" id=81]
[ext_resource path="res://Sprites/Player/T_MoveUp/TDPlayerMoveUp2.png" type="Texture" id=82]
[ext_resource path="res://Sprites/Player/T_MoveUp/TDPlayerMoveUp3.png" type="Texture" id=83]
[ext_resource path="res://Sprites/Player/T_MoveUp/TDPlayerMoveUp4.png" type="Texture" id=84]
[ext_resource path="res://Sprites/Player/T_MoveUp/TDPlayerMoveUp5.png" type="Texture" id=85]
[ext_resource path="res://Sprites/Player/T_MoveUp/TDPlayerMoveUp6.png" type="Texture" id=86]
[ext_resource path="res://Sprites/Player/T_MoveUp/TDPlayerMoveUp7.png" type="Texture" id=87]
[ext_resource path="res://Sprites/Player/T_MoveUp/TDPlayerMoveUp8.png" type="Texture" id=88]
[ext_resource path="res://Scripts/Camera2D.gd" type="Script" id=89]
[ext_resource path="res://Sound/footstep09.ogg" type="AudioStream" id=90]
[ext_resource path="res://Sound/metalLatch.ogg" type="AudioStream" id=91]
[ext_resource path="res://Sound/footstep01.ogg" type="AudioStream" id=92]
[ext_resource path="res://Sound/drawKnife2.ogg" type="AudioStream" id=93]
[ext_resource path="res://Sound/bookFlip3.ogg" type="AudioStream" id=94]
[ext_resource path="res://Scenes/Transition.tscn" type="PackedScene" id=95]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 14 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": false,
"name": "PROGRESS",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": false,
"name": "ENTER",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": false,
"name": "GRAB",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": false,
"name": "PICK",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": false,
"name": "CRACK",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ) ],
"loop": true,
"name": "Grab",
"speed": 8.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ) ],
"loop": true,
"name": "Move",
"speed": 10.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "Jump",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "Fall",
"speed": 5.0
} ]

[sub_resource type="ShaderMaterial" id=5]
render_priority = 1

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 36 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ) ],
"loop": true,
"name": "P_MoveLeft",
"speed": 10.0
}, {
"frames": [ ExtResource( 22 ) ],
"loop": true,
"name": "T_IdleDown",
"speed": 10.0
}, {
"frames": [ ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ) ],
"loop": true,
"name": "T_GrabRight",
"speed": 8.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ) ],
"loop": true,
"name": "T_MoveDown",
"speed": 10.0
}, {
"frames": [ ExtResource( 64 ), ExtResource( 65 ), ExtResource( 66 ), ExtResource( 67 ) ],
"loop": true,
"name": "T_GrabLeft",
"speed": 8.0
}, {
"frames": [ ExtResource( 35 ) ],
"loop": true,
"name": "T_IdleLeft",
"speed": 10.0
}, {
"frames": [ ExtResource( 37 ) ],
"loop": true,
"name": "P_IdleRight",
"speed": 10.0
}, {
"frames": [ ExtResource( 45 ), ExtResource( 75 ), ExtResource( 76 ), ExtResource( 77 ), ExtResource( 78 ), ExtResource( 79 ), ExtResource( 80 ), ExtResource( 81 ) ],
"loop": true,
"name": "T_MoveRight",
"speed": 10.0
}, {
"frames": [ ExtResource( 59 ), ExtResource( 60 ), ExtResource( 61 ), ExtResource( 62 ) ],
"loop": true,
"name": "T_GrabUp",
"speed": 8.0
}, {
"frames": [ ExtResource( 58 ) ],
"loop": true,
"name": "P_JumpLeft",
"speed": 10.0
}, {
"frames": [ ExtResource( 30 ) ],
"loop": true,
"name": "P_FallRight",
"speed": 10.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 82 ), ExtResource( 83 ), ExtResource( 84 ), ExtResource( 85 ), ExtResource( 86 ), ExtResource( 87 ), ExtResource( 88 ) ],
"loop": true,
"name": "T_MoveUp",
"speed": 10.0
}, {
"frames": [ ExtResource( 53 ) ],
"loop": true,
"name": "P_FallLeft",
"speed": 10.0
}, {
"frames": [ ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ) ],
"loop": true,
"name": "P_MoveRight",
"speed": 10.0
}, {
"frames": [ ExtResource( 63 ) ],
"loop": true,
"name": "P_JumpRight",
"speed": 10.0
}, {
"frames": [ ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ) ],
"loop": true,
"name": "T_GrabDown",
"speed": 8.0
}, {
"frames": [ ExtResource( 36 ) ],
"loop": true,
"name": "P_IdleLeft",
"speed": 10.0
}, {
"frames": [ ExtResource( 35 ), ExtResource( 68 ), ExtResource( 69 ), ExtResource( 70 ), ExtResource( 71 ), ExtResource( 72 ), ExtResource( 73 ), ExtResource( 74 ) ],
"loop": true,
"name": "T_MoveLeft",
"speed": 10.0
}, {
"frames": [ ExtResource( 21 ) ],
"loop": true,
"name": "T_IdleUp",
"speed": 10.0
}, {
"frames": [ ExtResource( 45 ) ],
"loop": true,
"name": "T_IdleRight",
"speed": 10.0
} ]

[sub_resource type="Shader" id=7]
code = "shader_type canvas_item;
	
void fragment() {
	float alpha = texture(TEXTURE, UV).a;
	COLOR.b = 10.0 * alpha;
	COLOR.a = alpha;
}"

[sub_resource type="ShaderMaterial" id=8]
shader = SubResource( 7 )

[sub_resource type="ViewportTexture" id=9]
viewport_path = NodePath("Viewport")

[sub_resource type="Shader" id=10]
code = "shader_type canvas_item;

// Allows you to control the output color in the Shader Params in the Inspector.
uniform vec4 silhouette_color : hint_color;

void fragment() {
	// We sample the screen texture at this point, which has the Mask node's pixels
	// rendered on it.
	vec4 screen_color = texture(SCREEN_TEXTURE, SCREEN_UV);
	vec4 tex_color = texture(TEXTURE, UV);
	COLOR = tex_color;

	// If the pixel's value is lower than the Mask's output color, it means the
	// mask is being occluded, so we draw the silhouette instead.
	if (screen_color.b < 10.0){
		COLOR.rgb = silhouette_color.rgb;
	}
}"

[sub_resource type="ShaderMaterial" id=11]
shader = SubResource( 10 )
shader_param/silhouette_color = Color( 0.133333, 0.666667, 0.690196, 1 )

[sub_resource type="ViewportTexture" id=12]
viewport_path = NodePath("Viewport")

[sub_resource type="Animation" id=13]
length = 0.2
tracks/0/type = "method"
tracks/0/path = NodePath("Audio/AudioCracking")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
}, {
"args": [  ],
"method": "stop"
} ]
}

[sub_resource type="Animation" id=14]
length = 0.5
tracks/0/type = "method"
tracks/0/path = NodePath("Audio/AudioFootstep")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
}, {
"args": [  ],
"method": "stop"
} ]
}

[sub_resource type="Animation" id=15]
length = 0.1
step = 0.05
tracks/0/type = "method"
tracks/0/path = NodePath("Audio/AudioGrabMove")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
}, {
"args": [  ],
"method": "stop"
} ]
}

[sub_resource type="Animation" id=16]
resource_name = "Land"
length = 0.2
tracks/0/type = "method"
tracks/0/path = NodePath("Audio/AudioLand")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
}, {
"args": [  ],
"method": "stop"
} ]
}

[sub_resource type="Animation" id=17]
length = 0.2
tracks/0/type = "method"
tracks/0/path = NodePath("Audio/AudioChangeGenre")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
}, {
"args": [  ],
"method": "stop"
} ]
}

[node name="Player" type="KinematicBody2D" groups=[
"heavy",
"player",
]]
script = ExtResource( 1 )

[node name="Trans" type="Node2D" parent="."]
z_index = 1

[node name="Transition" parent="Trans" instance=ExtResource( 95 )]
margin_left = -231.381
margin_top = -149.79
margin_right = 248.619
margin_bottom = 150.21

[node name="T_CollisionShape2D" type="CollisionShape2D" parent="."]
self_modulate = Color( 0.745098, 0.262745, 0.262745, 1 )
position = Vector2( 0.132431, 9.28925 )
shape = SubResource( 1 )

[node name="P_CollisionShape2D" type="CollisionShape2D" parent="."]
self_modulate = Color( 0, 1, 0.109804, 1 )
position = Vector2( 0.132431, 0.289246 )
shape = SubResource( 2 )
disabled = true

[node name="GrabDetect" type="RayCast2D" parent="."]
self_modulate = Color( 0.968627, 1, 0, 1 )
position = Vector2( 0, 9 )
rotation = -1.5708
scale = Vector2( 0.045, 1 )
enabled = true
cast_to = Vector2( 0, 20 )

[node name="Hint" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -40 )
frames = SubResource( 3 )
animation = "ENTER"

[node name="AnimatedShadow" type="AnimatedSprite" parent="."]
position = Vector2( 0, 16 )
frames = SubResource( 4 )
animation = "Jump"
playing = true
offset = Vector2( 0, -16 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 32, 32 )
transparent_bg = true
hdr = false
usage = 0
render_target_v_flip = true
render_target_update_mode = 3

[node name="PlayerAnimation" type="AnimatedSprite" parent="Viewport"]
material = SubResource( 5 )
position = Vector2( 16, 16 )
frames = SubResource( 6 )
animation = "T_MoveRight"
frame = 3
playing = true

[node name="Mask" type="Sprite" parent="."]
material = SubResource( 8 )
position = Vector2( 0.264862, 16.1568 )
texture = SubResource( 9 )
offset = Vector2( 0, -16 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 11 )
position = Vector2( 0, 16.0244 )
z_index = 100
texture = SubResource( 12 )
offset = Vector2( 0, -16 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
script = ExtResource( 89 )

[node name="SoundAnim" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/Cracking = SubResource( 13 )
anims/Footstep = SubResource( 14 )
anims/GrabMove = SubResource( 15 )
anims/Land = SubResource( 16 )

[node name="SwitchSoundAnim" type="AnimationPlayer" parent="."]
anims/ChangeGenre = SubResource( 17 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2

[node name="Audio" type="Node2D" parent="."]

[node name="AudioFootstep" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 90 )
volume_db = -10.0

[node name="AudioChangeGenre" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 91 )
volume_db = -5.0

[node name="AudioLand" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource( 92 )
volume_db = -10.0

[node name="AudioGrabMove" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource( 93 )
volume_db = 24.0

[node name="AudioCracking" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 94 )

[connection signal="animation_finished" from="Hint" to="." method="_on_Hint_animation_finished"]
[connection signal="animation_finished" from="SoundAnim" to="." method="_on_SoundAnim_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
